# vpd

./: .gitignore  CHANGELOG.md  CHEATSHEET.md  CHECKLIST.md  DRAFT.md  FAQ.md  GUIDE.md  MANUAL.md  Makefile  NOTES.md  README.md  TODO.md  go.mod  httpd.py  package-lock.json  package.json  rollup-components.js  rollup-vpd.js
.github/workflows/: alpha.yml  build.yml  cloudflare.yaml  nightly.yml
assets/: panel-dark.xcf  panel-light.xcf
assets/test scripts/: labels.vpx
cmd/vpd/: config.json  main.go
doc/: .gitignore  cheatsheet.tex
doc/examples/: bodacious.vpd  bodacious.vpx  quickstart.vpd  quickstart.vpx  quickstart.vpz  quickstart_widget..h  splashscreen.vpx
go/: .gitignore  Makefile  TODO.md  go.mod
go/html/: html.go
go/httpd/: httpd.go
grammar/: Cargo.toml  Makefile  binding.gyp  grammar.js  package.json
grammar-wasm/: LICENSE
grammar-wasm/src/: grammar.json  lib.rs
grammar/src/: grammar.json  main.rs  node-types.json  parser.c
grammars/command/: .gitignore.gitignore  Cargo.toml  Makefile  binding.gyp  checklist.txt  debug  debug.txt  example  grammar.js  package.json
grammars/command/bindings/node/: binding.cc  index.js
grammars/command/bindings/rust/: lib.rs
grammars/command/grammars/: parameters.js
grammars/command/src/: grammar.json  main.rs  node-types.json  parser.c
grammars/command/test/corpus/: api.txt  background.txt  comments.txt  decorate.txt  decorations.txt  export.txt  files.txt  guides.txt  input.txt  inputs.txt  labels.txt  lights.txt  module.txt  origin.txt  outputs.txt  parameter.txt  parameters.txt  polar.txt  widgets.txt
grammars/help/: Cargo.toml  Makefile  debug  example  grammar.js  package.json
grammars/hint/: Cargo.toml  Makefile  binding.gyp  debug  grammar.js  package-lock.json  package.json
grammars/wasm/: Cargo.toml  Makefile
grammars/wasm/bindings/node/: binding.cc
grammars/wasm/src/: node-types.json  parser.c
html/: index.html
html/css/: components.css  vpd.css
html/javascript/: HAL.js  VPD.js  api.js  command.js  db.js  fs.js  grammar.js  help.js  hints.js  rs.js  text.js  worker.js
httpd/: fs.go  httpd.go
log/: log.go
rs/: .gitignore  Cargo.toml  Makefile  package-lock.json
rs/html/: index.html
rs/src/: lib.rs  module.rs  panel.rs
rs/tests/: web.rs
rs/vpd/: Cargo.toml  Makefile  index.html  package-lock.json
rs/vpd/src/: command.rs  history.rs  lib.rs  module.rs  new_module.rs  panel.rs  stack.rs  utils.rs
rs/vpd/src/commands/: delete_decoration.rs  delete_guide.rs  delete_input.rs  delete_label.rs  delete_light.rs  delete_output.rs  delete_parameter.rs  delete_widget.rs  export_header.rs  export_helper.rs  export_svg.rs  list_decorations.rs  list_fonts.rs  list_parts.rs  load_font.rs  load_project.rs  load_script.rs  mod.rs  new_decoration.rs  new_guide.rs  new_input.rs  new_label.rs  new_light.rs  new_module.rs  new_output.rs  new_parameter.rs  new_widget.rs  save_project.rs  save_script.rs  set_background.rs  set_decoration.rs  set_guide.rs  set_input.rs  set_label.rs  set_light.rs  set_module.rs  set_origin.rs  set_output.rs  set_parameter.rs  set_widget.rs  (+1 more)
rs/vpd/src/panel/: anchor.rs  background.rs  component.rs  decoration.rs  guide.rs  guideline.rs  input.rs  label.rs  light.rs  mod.rs  origin.rs  output.rs  panel.rs  parameter.rs  widget.rs  x.rs  xy.rs  y.rs
rs/vpd/src/svg/: background.rs  circle.rs  decoration.rs  gradient.rs  guideline.rs  line.rs  mod.rs  panel_screw.rs  part.rs  point.rs  pprint.rs  rect.rs  snippet.rs  style.rs  svg.rs  text.rs
rs/vpd/src/vcv/: mod.rs  vcv.rs
rs/vpd/src/vcv/templates/: header.h
sass/base/: _default.scss  _fonts.scss
sass/components/: _components.scss  _drop.scss  (+3 more)
test/: hint_spec.js
test scripts/: circular-reference.vpx  decorations.vpx  guidelines.txt  guidelines.vpx  labels.vpx  panel.vpx
(+112 files in other folders)
