[package]
name = "tree-sitter-command"
description = "VPD tree-sitter command grammar"
version = "0.0.1"
keywords = ["incremental", "parsing", "vpd"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/twystd/vcv-panel-designer"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.20.10"

[build-dependencies]
cc = "1.0"
