[package]
name = "grammar"
description = "WASM functions for VCV grammar"
authors = [ "twystd <twystd@users.noreply.github.com>" ]
repository = "https://github.com/twystd/vcv-panel-designer.git"
version = "0.1.0"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.88"
console_error_panic_hook = { version = "0.1.7", optional = true }
tree-sitter-c2rust = "0.20.10"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

[build-dependencies]
cc = "1.0.83"

[dev-dependencies]
wasm-bindgen-test = "0.3.38"

[profile.release]
opt-level = "s"
