[package]
name = "vpd"
description = "WASM functions for VCV panel designer"
authors = [ "transcriptaze <transcriptaze@users.noreply.github.com>" ]
repository = "https://github.com/transcriptaze/vcpd.git"
version = "0.2.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.88"
serde-wasm-bindgen = "0.6.3"
once_cell = "1.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.108", features = ["raw_value"] }
tera = { version = "1", default-features = false }
regex = "1.10.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
chrono = "0.4.31"
flate2 = "1.0.28"
wasm-bindgen-futures = "0.4.42"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.38"

[profile.release]
opt-level = "s"
